fix: (overflow fixed)

--- a/css/blocks/_feedback.scss
+++ b/css/blocks/_feedback.scss
@@ -1,5 +1,6 @@
 .feedback {
   margin-bottom: 70px;
+  overflow: hidden;
 
   @include tablet() {
     margin-bottom: 52px;
